gallery overflow correction

--- a/src/css/partials/components/_contacts.scss
+++ b/src/css/partials/components/_contacts.scss
@@ -2,7 +2,7 @@
   &__title{
     text-align: center;
     margin: 0;
-    padding: 45px 0 25px;
+    padding: 25px 0 25px;
     @include font-family('Roboto Light', normal, normal);
     font-size: $font-size--title;
   }
