--- a/src/css/partials/components/_gallery.scss
+++ b/src/css/partials/components/_gallery.scss
@@ -1,4 +1,7 @@
 .gallery{
+  overflow: hidden;
+  padding-bottom: 20px;
+
   &__title{
     text-align: center;
     margin: 0;
